--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,13 @@ highlighter: pygments
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : 刘攀的技术博客
+title : Jekyll Bootstrap
 tagline: Site Tagline
 author :
   name : Name Lastname
-  email : jp380490944@gmail.com
-  github : lp380490944
-  twitter : lp380490944
+  email : blah@email.test
+  github : username
+  twitter : username
   feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
@@ -25,7 +25,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://lp380490944.github.io
+production_url : http://username.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
