--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ highlighter: pygments
 title : 刘攀的技术博客
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
+  name : liupan
+  email : jp380490944@gmail.com
+  github : lp380490944
+  twitter : lp380490944
   feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
