--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ highlighter: pygments
 #
 title : 刘攀的技术博客
 tagline: Site Tagline
-author :刘攀
+author :
   name : liupan
   email : jp380490944@gmail.com
   github : lp380490944
